// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accordion [snapshot] > closed 1`] = `
<div
  class="vesper-accordion"
  data-closed=""
>
  <button
    aria-disabled="false"
    aria-expanded="false"
    class="vesper-typography vesper-typography-label-md-bold vesper-accordion-trigger"
    tabindex="0"
    type="button"
  >
    <span>
      This is a title
    </span>
    <svg
      class="vesper-accordion-trigger-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 19.9414L14.8291 13.1016L14.8291 10.8984L8 4.05859L9.05664 3L16.3242 10.2783L16.3242 13.7217L9.05664 21L8 19.9414Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`accordion [snapshot] > open 1`] = `
<div
  class="vesper-accordion"
  data-open=""
>
  <button
    aria-controls="base-ui-_r_4_"
    aria-disabled="false"
    aria-expanded="true"
    class="vesper-typography vesper-typography-label-md-bold vesper-accordion-trigger"
    data-panel-open=""
    tabindex="0"
    type="button"
  >
    <span>
      This is a title
    </span>
    <svg
      class="vesper-accordion-trigger-icon"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 19.9414L14.8291 13.1016L14.8291 10.8984L8 4.05859L9.05664 3L16.3242 10.2783L16.3242 13.7217L9.05664 21L8 19.9414Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="vesper-accordion-panel"
    data-open=""
    id="base-ui-_r_4_"
    style="--collapsible-panel-height: auto; --collapsible-panel-width: auto; animation-name: none;"
  >
    <div
      class="vesper-typography vesper-typography-copy-sm vesper-accordion-children"
    >
      <div
        style="height: 200px;"
      />
    </div>
  </div>
</div>
`;
